[gd_scene load_steps=19 format=3 uid="uid://c7iwi5kg8o3pn"]

[ext_resource type="Script" path="res://automated/belt.gd" id="1_jfjc8"]
[ext_resource type="Texture2D" uid="uid://cm8lfg5dptwgf" path="res://texture/belts.png" id="1_njt1a"]
[ext_resource type="Texture2D" uid="uid://cgtw0lqw8i76g" path="res://texture/belt-splitter.png" id="3_x0jbh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_08ofd"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_amjk6"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kye7e"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x2vp"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jd2x"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kv3y"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcw4k"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckdi7"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhinu"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkep3"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j51j0"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo18f"]
atlas = ExtResource("1_njt1a")
region = Rect2(0, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7wwkf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08ofd")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amjk6")
}],
"loop": true,
"name": &"down_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kye7e")
}],
"loop": true,
"name": &"down_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x2vp")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jd2x")
}],
"loop": true,
"name": &"left_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kv3y")
}],
"loop": true,
"name": &"left_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcw4k")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckdi7")
}],
"loop": true,
"name": &"right_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhinu")
}],
"loop": true,
"name": &"right_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_x0jbh")
}],
"loop": true,
"name": &"splitter",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkep3")
}],
"loop": false,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j51j0")
}],
"loop": true,
"name": &"up_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo18f")
}],
"loop": true,
"name": &"up_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1jb8"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sllo"]
size = Vector2(10, 10)

[node name="Belt" type="Area2D"]
collision_mask = 2
script = ExtResource("1_jfjc8")
from_direction = 0
to_direction = 1

[node name="Markers" type="Node2D" parent="."]

[node name="R" type="Marker2D" parent="Markers"]
position = Vector2(8, 0)

[node name="L" type="Marker2D" parent="Markers"]
position = Vector2(-8, 0)

[node name="T" type="Marker2D" parent="Markers"]
position = Vector2(0, -8)

[node name="B" type="Marker2D" parent="Markers"]
position = Vector2(0, 8)

[node name="C" type="Marker2D" parent="Markers"]

[node name="NextUp" type="Marker2D" parent="Markers"]
position = Vector2(0, -16)

[node name="NextRight" type="Marker2D" parent="Markers"]
position = Vector2(16, 0)

[node name="NextLeft" type="Marker2D" parent="Markers"]
position = Vector2(-16, 0)

[node name="NextDown" type="Marker2D" parent="Markers"]
position = Vector2(0, 16)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7wwkf")
animation = &"right"
autoplay = "right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_u1jb8")

[node name="ItemHolder" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false

[node name="NextBeltDetector" type="Area2D" parent="."]
position = Vector2(0, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextBeltDetector"]
shape = SubResource("RectangleShape2D_6sllo")
